--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
 language: go
 sudo: false
 go:
-  - 1.11.x
+  - 1.12.x
 env:
   global:
     - GOARCH=amd64
 script:
   # TODO: Create lint
   #- go list ./... | grep -v vendor | xargs go vet
-  - go list ./... | grep -v vendor | xargs go test -v
+  - go test -v -cover ./...
