issue #45 Update .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,4 @@ env:
 script:
   # TODO: Create lint
   #- go list ./... | grep -v vendor | xargs go vet
-  - go test -v -cover ./...
+  - go test -v -cover -bench . ./...
