--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,8 @@ go:
 env:
   global:
     - GOARCH=amd64
+    - GO111MODULE=on
 script:
   # TODO: Create lint
   #- go list ./... | grep -v vendor | xargs go vet
-  - go test -v -cover ./...
+  - go test -v -cover -mod=vendor ./...
