--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,5 @@ env:
 script:
   # TODO: Create lint
   #- go list ./... | grep -v vendor | xargs go vet
-  - go test -v -cover -bench . ./...
+  - go test -v -cover ./...
+  - go test -bench . -timeout 1h ./...
