--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,4 @@ script:
   # TODO: Create lint
   #- go list ./... | grep -v vendor | xargs go vet
   - go test -v -cover -mod=vendor ./...
-  - go test -mod=vendor -bench . -timeout 1h ./...
+  - travis_wait 60 go test -mod=vendor -bench . -timeout 1h ./...
