--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,5 @@ script:
   # TODO: Create lint
   #- go list ./... | grep -v vendor | xargs go vet
   - go test -v -cover -mod=vendor ./...
-  - travis_wait 60 go test -mod=vendor -bench . -timeout 1h ./...
+  # Benchmarks are slow very much
+  #- travis_wait 60 go test -mod=vendor -bench . -timeout 1h ./...
