--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,6 @@ env:
 script:
   # TODO: Create lint
   #- go list ./... | grep -v vendor | xargs go vet
-  - go test -v -cover -mod=vendor ./...
+  - go test -v -cover ./...
   # Benchmarks are slow very much
-  #- travis_wait 60 go test -mod=vendor -bench . -timeout 1h ./...
+  #- travis_wait 60 go test -bench . -timeout 1h ./...
