ci: add new checks in golang github actions workflow

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,16 +1,11 @@
 name: Go
 
-on:
-  push:
-    branches:
-    - master
-    - dev
-    - issue_*
+on: push
 
 jobs:
 
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
     steps:
     - uses: actions/checkout@v2
 
@@ -19,8 +14,31 @@ jobs:
       with:
         go-version: 1.16.4
 
-    - name: Build
+    - name: Go Mod
+      run: go mod download
+
+    # TODO: Add Go format step.
+    #- name: Go Format
+    #  run: gofmt -s -w . && git diff --exit-code
+
+    - name: Go Tidy
+      run: go mod tidy && git diff --exit-code
+
+    - name: Go Vet
+      run: go vet
+
+    # TODO: Add a staticcheck step.
+    #- uses: dominikh/staticcheck-action@v1.2.0
+    #  with:
+    #    version: "2022.1"
+    #    install-go: false
+
+    # TODO: add go lint
+
+    - name: Go Build
       run: go build -v ./...
 
-    - name: Test
-      run: go test -v -cover ./...
+    - name: Go Test
+      run: go test -race -shuffle=on -coverprofile=coverage.txt -v -cover ./...
+
+    # TODO: Add test coverage.
